<?xml version="1.0"?>
<package format="2">
  <name>pose_follower</name>
  <version>0.0.1</version>
  <description>Lets a KUKA iiwa endeffector follow a given pose.</description>

  <author email="marcus.freiherr_ebner_von_eschenbach@stud.tu-darmstadt.de">Marcus Ebner</author>
  <maintainer email="marcus.freiherr_ebner_von_eschenbach@stud.tu-darmstadt.de">Marcus Ebner</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>iiwa_description</build_depend>
  <build_depend>iiwa_moveit</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>iimoveit</build_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>iiwa_description</build_export_depend>
  <build_export_depend>iiwa_moveit</build_export_depend>
  <build_export_depend>iiwa_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosmsg</build_export_depend>
  <build_export_depend>iimoveit</build_export_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>iiwa_description</exec_depend>
  <exec_depend>iiwa_moveit</exec_depend>
  <exec_depend>iiwa_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosmsg</exec_depend>
  <exec_depend>iimoveit</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
